[ADD] index.html: include youtube video format

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,12 @@ Second line.</code></pre>
 							</td>
 							<td><p>You can also use tables.</p></td>
 						</tr>
+						<tr>
+							<td>
+								<pre><code>This shows a preview for youtube video <wbr/></code></pre>
+							</td>
+							<td><p>[![](http://img.youtube.com/vi/YOUTUBE_VIDEO_ID/0.jpg)](https://youtu.be/YOUTUBE_VIDEO_ID)</p></td>
+						</tr>
 					</table>
 
 					<p><a href="http://daringfireball.net/projects/markdown/syntax" target="_blank">Full Markdown documentation</a></p>
